--- a/1_shot.ipynb
+++ b/1_shot.ipynb
@@ -935,7 +935,7 @@
     }
    ],
    "source": [
-    "print(prompt.invoke(input))" # Unsure if this is what the image should be tokenized as -- documentation does not yet exist for multimodal LLMs
+    "print(prompt.invoke(input))  # Unsure if this is what the image should be tokenized as -- documentation does not yet exist for multimodal LLMs"
    ]
   },
   {
