--- a/yale_poster.ipynb
+++ b/yale_poster.ipynb
@@ -159,8 +159,8 @@
     }
    ],
    "source": [
-    "# os.environ['OPENAI_API_KEY']=\"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\"\n",
-    "# os.environ['OPENAI_API_BASE']=\"http://192.168.29.28:8000\"\n",
+    "# os.environ['OPENAI_API_KEY']=##,
+    "# os.environ['OPENAI_API_BASE']=##,
     "\n",
     "from langchain_community.llms import Ollama\n",
     "from langchain.schema import HumanMessage, SystemMessage\n",
@@ -799,7 +799,7 @@
     "from llama_index.core import SimpleDirectoryReader\n",
     "\n",
     "\n",
-    "GOOGLE_API_KEY = \"AIzaSyAjzI_qNEW16dBb_we3Ptky4eU8bZYh3S0\"\n",
+    "GOOGLE_API_KEY = #",
     "MODEL_NAME = \"models/gemini-pro-vision\"\n",
     "\n",
     "gemini_llm = GeminiMultiModal(\n",
