--- a/yale_poster.ipynb
+++ b/yale_poster.ipynb
@@ -159,8 +159,8 @@
     }
    ],
    "source": [
-    "# os.environ['OPENAI_API_KEY']=##,
-    "# os.environ['OPENAI_API_BASE']=##,
+    "# os.environ['OPENAI_API_KEY']=##",
+    "# os.environ['OPENAI_API_BASE']=##",
     "\n",
     "from langchain_community.llms import Ollama\n",
     "from langchain.schema import HumanMessage, SystemMessage\n",
