--- a/simple_0_shot.ipynb
+++ b/simple_0_shot.ipynb
@@ -1408,7 +1408,7 @@
     "from llama_index.core import SimpleDirectoryReader\n",
     "\n",
     "\n",
-    "GOOGLE_API_KEY = \"AIzaSyAjzI_qNEW16dBb_we3Ptky4eU8bZYh3S0\"\n",
+    "GOOGLE_API_KEY = #\n",
     "MODEL_NAME = \"models/gemini-pro-vision\"\n",
     "\n",
     "gemini_llm = GeminiMultiModal(\n",
